--- a/src/app/home/components/main/main.component.html
+++ b/src/app/home/components/main/main.component.html
@@ -1,7 +1,28 @@
-<!-- <div class="flex flex-row h-screen text-white w-full">
-    <app-menu class="flex basis-1/12" (eventEmit)="logout()"></app-menu>
-    <app-shared-interface class="flex basis-1/4 bg-[#343c46] pt-[6vh] p-3"></app-shared-interface>
-    <app-messages class="flex basis-2/3 bg-[#303841]"></app-messages>
-</div> -->
-<div (click)="getAdhdResponse()" tabindex="0" class="p-2 border-1 border-solid border-black">get adhd results</div>
+<app-nav-bar (logoutEvent)="logout()"></app-nav-bar>
+<!-- <div (click)="getAdhdResponse()" tabindex="0" class="mt-12 p-2 border-1 border-solid border-black">get adhd results</div> -->
+<div class="bg-blue-100 p-6 mt-[50px] flex flex-col items-center justify-center gap-12 min-h-screen">
+    <h1 class="text-4xl md:text-6xl font-bold bg-clip-text text-transparent bg-gradient-to-r
+     from-purple-600 to-blue-600 dark:from-purple-400 dark:to-blue-400">Reading Abilities Screening Tool</h1>
+    <div class="text-xl">A friendly way to understand your unique style and get personalized learning recommendations</div>
+    <div class="flex flex-row items-center justify-center gap-5">
+        <div *ngFor="let data of cardData">
+            <div class="flex flex-col p-7 gap-4 items-center justify-center bg-white border-1 border-gray-600 max-w-[350px] h-[300px] rounded-lg">
+                <img src="" />
+                <div class="text-xl font-semibold text-center">{{data.title}}</div>
+                <div class="text-[16px] text-center">{{data.content}}</div>
+            </div>
+        </div>
+    </div>
+    <button (click)="gotoScreening()" class="inline-flex items-center justify-center whitespace-nowrap font-medium ring-offset-background
+    focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 
+    disabled:pointer-events-none disabled:opacity-50 bg-primary hover:bg-primary/90 h-11 bg-gradient-to-r
+     from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 text-white text-lg px-8 py-6 rounded-full 
+     shadow-lg hover:shadow-xl transition-all duration-300">Start Screening<svg xmlns="http://www.w3.org/2000/svg" width="24" 
+     height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" 
+     stroke-linejoin="round" class="lucide lucide-volume2 w-6 h-6 ml-2">
+     <path d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"></path>
+     <path d="M16 9a5 5 0 0 1 0 6"></path>
+     <path d="M19.364 18.364a9 9 0 0 0 0-12.728"></path></svg></button>
+     <p class="text-sm text-gray-600">Note: This tool provides learning suggestions only and is not a medical diagostic tool</p>
+</div>
 <router-outlet></router-outlet>
