--- a/src/app/home/components/nav-bar/nav-bar.component.html
+++ b/src/app/home/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white fixed h-fit pt-1 px-12 w-full top-0 border-b-1 border-gray-400">
+<!-- <div class="bg-white fixed h-fit pt-1 px-12 w-full top-0 border-b-1 border-gray-400">
     <div class="py-2 flex flex-row items-center justify-end gap-4">
         <div class="setting flex flex-row items-center justify-center gap-1">
             <label class="switch">
@@ -16,4 +16,28 @@
         </div>
         <div tabindex="0" (keydown.enter)="toggleLogout()" (click)="toggleLogout()"><mat-icon style="font-size: 20px;">logout</mat-icon></div>
     </div>
+</div> -->
+<header>
+<div class="container">
+  <div class="header-content">
+    <div class="logo">
+      <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="#4A9D9C" stroke-width="2"/>
+        <path d="M8 14C9.10457 14 10 13.1046 10 12C10 10.8954 9.10457 10 8 10C6.89543 10 6 10.8954 6 12C6 13.1046 6.89543 14 8 14Z" fill="#4A9D9C"/>
+        <path d="M16 14C17.1046 14 18 13.1046 18 12C18 10.8954 17.1046 10 16 10C14.8954 10 14 10.8954 14 12C14 13.1046 14.8954 14 16 14Z" fill="#4A9D9C"/>
+        <path d="M8 15C8 17.2091 9.79086 19 12 19C14.2091 19 16 17.2091 16 15" stroke="#4A9D9C" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+      <span>NeuroDiversity</span>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact</a></li>
+        <li> <div tabindex="0" (keydown.enter)="toggleLogout()" (click)="toggleLogout()"><mat-icon style="font-size: 20px;">logout</mat-icon></div></li>
+      </ul>
+    </nav>
+  </div>
 </div>
+
