--- a/src/app/home/components/nav-bar/nav-bar.component.html
+++ b/src/app/home/components/nav-bar/nav-bar.component.html
@@ -31,11 +31,12 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a><div tabindex="0" (click)="cgModule()">Caregiver Module</div></a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Contact</a></li>
-        <li> <div tabindex="0" (keydown.enter)="toggleLogout()" (click)="toggleLogout()"><mat-icon style="font-size: 20px;">logout</mat-icon></div></li>
+        <li><a><div tabindex="0" (keydown.enter)="toggleLogout()" (click)="toggleLogout()">logout</div></a></li>
       </ul>
     </nav>
   </div>
